# eop-ui

./: .gitignore  README.md  pyproject.toml
TesouroEOP_UI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eop_ui/: main.py
ui/: main.py
