[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TesouroEOP-UI"
version = "1.0.0"
description = "Biblioteca para padronização da interface gráfica (UI) nos programas do Tesouro do Estado do Rio de Janeiro"
readme = "README.md"
authors = [{ name = "EOP/SUPCONC"}]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium",
    "requests",
    "msal",
    "setuptools"
]
[project.urls]
"Homepage" = "https://github.com/matheusrbr11/eop-ui"